--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link rel="stylesheet" href="styles.css" type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css">
   <title>Blogging Site</title>
 </head>
 <body>
