--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <title>Blogging Site</title>
 </head>
 <body>
-  
+  <h1>Blogging Site</h1>
+  <!--ADD Blog Header Below at every h2-->
+  <h2>My Favorite Samuel L. Jackson Roles</h2>
+  <h3>Jules Winnfield</h3>
+<p>Jules represents the voice of reason in Pulp Fiction. In an otherwise spinout of a situation, Jules sees the bigger picture: if survival is the name of the game then his ultimate goal is </p>
+
+<h2></h2>
+<h3>Hold on to your butts</h3>
+<p>Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass. </p>
+
+<h2></h2>
+<h3>Is she dead, yes or no?</h3>
+<p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man. </p>
+
+<h2></h2>
+<h3>I'm serious as a heart attack</h3>
+<p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand? </p>
+
 </body>
 </html>
