--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   <h1>Blogging Site</h1>
   <h2>My Favorite Samuel L. Jackson Roles</h2>
   <div>
-    <h3 class="character">Jules Winnfield, Pulp Fiction</h3>
+    <h3 class="pulp-fiction">Jules Winnfield, Pulp Fiction</h3>
     <p>Jules represents the voice of reason in Pulp Fiction. The contrast between him and Vincent Vega depicts the difference between quitting while you're ahead and being too subborn to quit. He also demonstrates the most character growth out of any character in the film, seeing the coincidence of him quoting Ezekiel 25:17 and seeing that has more to do with his own journey than it does with anything else.</p>
   </div>
 
   <div>
-    <h3 class="character">Elijah Price, Unbreakable</h3>
+    <h3 class="unbreakable">Elijah Price, Unbreakable</h3>
     <p>Elijah is the super villain of the story who helps Bruce Willis's character discover and develope his powers.</p>
   </div>
 
   <div>
-    <h3 class="character">Is she dead, yes or no?</h3>
+    <h3 class="she-dead">Is she dead, yes or no?</h3>
     <p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
   </div>
 
   <div>
-    <h3 class="character">I'm serious as a heart attack</h3>
+    <h3 class="heart-attack">I'm serious as a heart attack</h3>
     <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand? </p>
   </div>
 </body>
